Clean version sync up

--- a/video-processing-service/tsconfig.json
+++ b/video-processing-service/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "es6", 
         "module": "commonjs",
         "rootDir": "src",
         "outDir": "dist",
         "strict": true,
         "esModuleInterop": true},
-    "include": ["src/**/*.ts"],
-    "exclude": ["node_modules"]
+    "include": ["src/**/*.ts"], // build all ts files in src folder
+    "exclude": ["node_modules"] // exclude node_modules folder
 }
